--- a/src/GildedRose.Console/GildedRose.Console.csproj
+++ b/src/GildedRose.Console/GildedRose.Console.csproj
@@ -42,6 +42,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Item.cs" />
     <Compile Include="Updater.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
